tests/typecheck/fail/undefined_var.tw
// Test undefined variable error

fn test() Int {
    foo  // Error: foo is not defined
}
